--- a/package.json
+++ b/package.json
@@ -1,20 +1,24 @@
 {
   "name": "react-neo4j",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
+  "homepage": "https://ptr97.github.io/react-neo4j",
   "dependencies": {
+    "dotenv": "^8.1.0",
+    "gh-pages": "^2.1.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-scripts": "3.3.0",
     "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^0.88.1",
-    "dotenv": "^8.1.0"
+    "semantic-ui-react": "^0.88.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
   },
   "eslintConfig": {
     "extends": "react-app"
