--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
-API_URI=http://localhost:5000/neo4j-graphql
+API_URI=http://68.183.145.245:3000/neo4j-graphql
+
+API_URI_DEV=http://localhost:5000/neo4j-graphql
+
